fix some contrast error

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -44,7 +44,7 @@ body {
  * pad the modal container in order for the modals to be centered
  * while also taking the chat size into consideration.
 */
-@media (min-width: 480px + $sidebarWidth) {
+@media (min-width: 280px + $sidebarWidth) {
     .shift-right [class^="Modal__FillScreen"] {
         padding-left: $sidebarWidth;
     }
